register and login done

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,8 @@
     "allowJs": true,
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
+    "sourceMap": true,
+    "outDir": "dist",
     "paths": {
       "~/*": ["./app/*"]
     },
