--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build": "npm run build:css && remix build",
     "build:css": "tailwindcss -m -i ./styles/app.css -o app/styles/app.css",
-    "dev": "concurrently \"remix watch\" \"cross-env NODE_ENV=development nodemon server.js\"",
+    "dev": "concurrently \"npm run dev:css\" \"remix watch\" \"cross-env NODE_ENV=development nodemon server.js\"",
     "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css",
     "dev:node": "cross-env NODE_ENV=development nodemon --require dotenv/config ./server.js --watch ./server.js",
     "dev:remix": "remix watch",
@@ -15,6 +15,7 @@
     "@remix-run/express": "^1.8.0",
     "@remix-run/node": "^1.8.0",
     "@remix-run/react": "^1.8.0",
+    "bcrypt": "^5.1.0",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
@@ -29,6 +30,7 @@
     "@remix-run/dev": "^1.8.0",
     "@remix-run/eslint-config": "^1.8.0",
     "@remix-run/serve": "^1.8.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "autoprefixer": "^10.4.13",
